# SoccerbotCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_configure.sh  threading_faq.txt
.github/workflows/: x86-windows.yml
models/: onnx-basic-medium.onnx  onnx-basic-small.onnx
scripts/: .gitignore  README.md
scripts/emulator/: README.md  run_emulator.py
scripts/emulator/src/: Ball.py  Beam.py  BeamManager.py  Emote.py  EmoteManager.py  Emulator.py  Firework.py  FireworkManager.py  HighScoreCounter.py  ImageLoader.py  ScoreCounter.py  Vec2D.py  __init__.py  util.py
scripts/generator/: __init__.py  overlays.py
scripts/toolchains/: bundle_checkpoints.sh  create_package.sh
scripts/training/: async_batch_generator.py  model.py  requirements.txt  run_create_onnx.py  run_create_tflite.py  run_quantize.py  run_training.py
scripts/training-pytorch/: README.md  requirements.txt  run_create_onnx.py  run_training.py
scripts/training-pytorch/models/: model_basic_large.py  model_basic_medium.py  model_basic_small.py  model_gpu_medium.py  model_gpu_small.py  select_model.py
scripts/training-tensorflow/: README.md  run_create_onnx.py  run_training.py
scripts/training-tensorflow/models/: model_basic_medium.py  model_basic_small.py  select_model.py
scripts/training/generator/: config.py  generator.py  overlays.py
scripts/training/models/: model_basic.py  model_basic_large.py  model_squeezenet.py  model_squeezenet_large.py  select_model.py
src/: App.cpp  App.h  IModel.h  OnnxDirectMLModel.cpp  OnnxDirectMLModel.h  Prediction.h  Predictor.cpp  Predictor.h  SoccerParams.h  SoccerPlayer.cpp  SoccerPlayer.h  SoccerPlayerController.cpp  SoccerPlayerController.h  TensorflowLiteModel.cpp  TensorflowLiteModel.h  gui.cpp  gui.h  gui_widgets.cpp  gui_widgets.h  main.cpp  missing.c  model.cpp  model.h
